2011-04-13  Rik  <octave@nomad.inbox5.com>

	* help.cc: Add spaces after commas in @seealso blocks.

2011-04-12  Rik  <octave@nomad.inbox5.com>

	* load-path.cc (restoredefaultpath): Correct use of it's -> its in 
	documentation.

2011-04-10  John Eaton  <jwe@octave.org>

	* graphics.cc (Fishandle) Accept vector of handles (bug #33025).

2011-04-08  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/balance.cc, DLD-FUNCTIONS/eig.cc,
	DLD-FUNCTIONS/hess.cc, DLD-FUNCTIONS/pinv.cc, DLD-FUNCTIONS/schur.cc,
	DLD-FUNCTIONS/sqrtm.cc, DLD-FUNCTIONS/svd.cc, data.cc: Improve
	docstrings.

2011-04-06  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/dmperm.cc, data.cc: Clean up operator and function
	indices.

2011-04-04  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/nproc.cc: Spellcheck documentation for 3.4.1 release.

2011-04-04  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/colamd.cc, data.cc, file-io.cc: Grammarcheck files
	for 3.4.1 release.

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* input.cc (add_input_event_hook, remove_input_event_hook): Improve
	docstring.
	* utils.cc (isvarname): Add seealso link to iskeyword().
	* variables.cc (missing_function_hook): Improve docstring.

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/dot.cc (blkmm): Improve docstring.

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* data.cc (diag): Add documentation for 3-input form of diag.  Add new
	tests.

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* data.cc (diag): Reverse previous changeset.  Return 3-input form
	of diag().

2011-04-01  Rik  <octave@nomad.inbox5.com>

	* data.cc (diag): Remove archaic 3-input argument form of function.
	Add all calling forms of function to docstring.

2011-04-01  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/filter.cc: Fix orientation of initial conditions vector
	(bug #32741).  Revamp test vectors.

2011-04-01  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/__fltk_uigetfile__.cc, DLD-FUNCTIONS/__init_fltk__.cc: